# browserbase-python

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
browserbase/: __init__.py  api_models.py  async_session.py  base_session.py  browserbase.py  core.py  sync_session.py
browserbase/playwright/: __init__.py  pl_browserbase.py  pl_session.py
browserbase/selenium/: __init__.py  sl_browserbase.py  sl_connection.py  sl_session.py
tests/: conftest.py  test_async_session.py  test_browserbase.py  test_core.py  test_session.py  test_sync_session.py
tests/playwright/: test_pl_browserbase.py
tests/selenium/: test_sl_browserbase.py
