[project]
name = "browserbase"
version = "0.3.0"
authors = [
  { name="Browserbase", email="support@browserbase.com" },
]
description = "Browserbase Python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic >= 2.7.1",
  "httpx >= 0.27.0",
  "cryptography >= 43.0.1",
  "pydantic >= 2.9.2",
]

[project.urls]
Homepage = "https://browserbase.com"
Source = "https://github.com/browserbase/python-sdk"
Issues = "https://github.com/browserbase/python-sdk/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["browserbase"]

[tool.poetry]
name = "browserbase"
version = "0.3.0"
description = "Browserbase official Python package"
authors = ["Browserbase <support@browserbase.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.2"
cryptography = "^43.0.1"
pydantic = "^2.9.2"

playwright = { version = "^1.46.0", optional = true }
selenium = { version = "^4.24.0", optional = true }

[tool.poetry.extras]
playwright = ["playwright"]
selenium = ["selenium"]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pdbpp = "^0.10.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
mock = "^5.1.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
respx = "^0.21.1"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
